--- a/packages/test-studio/src/themes/dark.css
+++ b/packages/test-studio/src/themes/dark.css
@@ -11,8 +11,6 @@
   /* Forms */
   --default-button-color: #145eda;
   --default-button-color--inverted: #fff;
-  --default-button-color--hover: #156dff;
-  --default-button-color--active: #156dff;
   --input-bg: #1a202e;
 
   --input-color: #fff;
